src/objects/Userobject__c.object
<CustomObject>
    <fields>
        <fullName>Cell_Number__c</fullName>
        <label>Cell Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fed_ID__c</fullName>
        <label>Fed ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test-1</fullName>
                </value>
                <value>
                    <fullName>Test-2</fullName>
                </value>
                <value>
                    <fullName>Test-3</fullName>
                </value>
                <value>
                    <fullName>Test-4</fullName>
                </value>
                <value>
                    <fullName>Test-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level I</fullName>
                </value>
                <value>
                    <fullName>Level II</fullName>
                </value>
                <value>
                    <fullName>Level III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secure Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Usercustomobject</label>
    <nameField>
        <label>UserCustom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usercustomobjects</pluralLabel>
    <recordTypes>
        <fullName>gautham</fullName>
        <active>true</active>
        <label>gautham</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>